installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	__init__.py \
	AVSwitch.py \
	About.py \
	ActionMap.py \
	BlinkingPixmap.py \
	Button.py \
	ChannelsImporter.py \
	ChoiceList.py \
	ClientMode.py \
	ConditionalWidget.py \
	config.py \
	ConfigList.py \
	Console.py \
	DiskInfo.py \
	Element.py \
	EpgList.py \
	EpgLoadSave.py \
	FIFOList.py \
	FanControl.py \
	FileList.py \
	GUIComponent.py \
	Harddisk.py \
	HdmiCec.py \
	HdmiRecord.py \
	ImportChannels.py \
	Input.py \
	InputDevice.py \
	InputHotplug.py \
	International.py \
	Label.py \
	Language.py \
	Lcd.py \
	MediaPlayer.py \
	MenuList.py \
	MovieList.py \
	MultiContent.py \
	Netlink.py \
	Network.py \
	NimManager.py \
	Opkg.py \
	PackageInfo.py \
	ParentalControl.py \
	PerServiceDisplay.py \
	Pixmap.py \
	Playlist.py \
	PluginComponent.py \
	PluginList.py \
	PowerTimerList.py \
	ProgressBar.py \
	RFmod.py \
	RecordingConfig.py \
	ResourceManager.py \
	Scanner.py \
	ScrollLabel.py \
	SelectionList.py \
	Sensors.py \
	ServiceEventTracker.py \
	ServiceList.py \
	ServicePosition.py \
	ServiceScan.py \
	Slider.py \
	StackTrace.py \
	SystemInfo.py \
	Task.py \
	TimerList.py \
	TimerSanityCheck.py \
	Timezones.py \
	TuneTest.py \
	TunerInfo.py \
	UsageConfig.py \
	VariableText.py \
	VariableValue.py \
	VfdSymbols.py \
	VideoWindow.py \
	VolumeBar.py \
	VolumeControl.py
