installdir = $(pkglibdir)/python/Screens

install_PYTHON = \
	__init__.py \
	AudioSelection.py \
	AutoDiseqc.py \
	ChannelSelection.py \
	ChoiceBox.py \
	Ci.py \
	ClientMode.py \
	ClockDisplay.py \
	ConfigMenu.py \
	Console.py \
	CopyFiles.py \
	CronTimer.py \
	Dish.py \
	DVD.py \
	EpgSelection.py \
	EventView.py \
	FactoryReset.py \
	FixedMenu.py \
	FlashImage.py \
	Globals.py \
	HarddiskSetup.py \
	HelpMenu.py \
	Hotkey.py \
	InfoBar.py \
	InfoBarGenerics.py \
	Information.py \
	InputBox.py \
	InputDeviceSetup.py \
	InstallWizard.py \
	LanguageSelection.py \
	LocationBox.py \
	Menu.py	\
	MessageBox.py \
	MinuteInput.py \
	MovieSelection.py \
	Mute.py \
	NetworkSetup.py \
	NumericalTextInputHelpDialog.py \
	Opkg.py \
	OScamInfo.py \
	ParentalControlSetup.py \
	PictureInPicture.py \
	PiPSetup.py \
	PluginBrowser.py \
	PowerTimerEdit.py \
	PowerTimerEntry.py \
	PVRState.py \
	RdsDisplay.py \
	Recording.py \
	Satconfig.py \
	ScanSetup.py \
	Scart.py \
	Screen.py \
	ScreenSaver.py \
	ServiceInfo.py \
	ServiceScan.py \
	ServiceStopScreen.py \
	SessionGlobals.py \
	Setup.py \
	SetupFallbacktuner.py \
	SimpleSummary.py \
	SkinSelector.py \
	SleepTimerEdit.py \
	SoftcamSetup.py \
	SoftwareUpdate.py \
	Standby.py \
	StartWizard.py \
	StreamingClientsInfo.py \
	SubservicesQuickzap.py \
	SubtitleDisplay.py \
	TaskView.py \
	TextBox.py \
	Time.py \
	TimeDateInput.py \
	TimerEdit.py \
	TimerEntry.py \
	TimerSelection.py \
	Timeshift.py \
	UnhandledKey.py \
	VirtualKeyBoard.py \
	Volume.py \
	Wizard.py \
	WizardLanguage.py
