installdir = $(pkglibdir)/python/Tools

install_PYTHON = \
	__init__.py \
	Alternatives.py \
	ASCIItranslit.py \
	BoundFunction.py \
	camcontrol.py \
	CIHelper.py \
	CList.py \
	CopyFiles.py \
	CountryCodes.py \
	Directories.py \
	Downloader.py \
	Event.py \
	FallbackTimer.py \
	FuzzyDate.py \
	Geolocation.py \
	GetEcmInfo.py \
	HardwareInfo.py \
	Import.py \
	ISO639.py \
	LoadPixmap.py \
	Log.py \
	LogConfig.py \
	Multiboot.py \
	Notifications.py \
	NumericalTextInput.py \
	Profile.py \
	RedirectOutput.py \
	StbHardware.py \
	TextBoundary.py \
	Trace.py \
	Transponder.py \
	Trashcan.py \
	UnitConversions.py \
	WeatherID.py \
	XMLTools.py
