installdir = $(pkglibdir)/python/Tools

install_PYTHON = \
	__init__.py \
	Alternatives.py \
	ASCIItranslit.py \
	AVHelper.py \
	BoundFunction.py \
	camcontrol.py \
	CIHelper.py \
	CList.py \
	Conversions.py \
	CopyFiles.py \
	CountryCodes.py \
	Directories.py \
	Downloader.py \
	Event.py \
	FallbackTimer.py \
	FuzzyDate.py \
	Geolocation.py \
	GetEcmInfo.py \
	HardwareInfo.py \
	Import.py \
	ISO639.py \
	LoadPixmap.py \
	Log.py \
	LogConfig.py \
	MultiBoot.py \
	Notifications.py \
	NumericalTextInput.py \
	OEMInfo.py \
	Profile.py \
	PyVerHelper.py \
	RedirectOutput.py \
	StbHardware.py \
	TextBoundary.py \
	Trace.py \
	Transponder.py \
	Trashcan.py \
	UnitConversions.py \
	WeatherID.py \
	XMLTools.py
