installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py Streaming.py Streaming2.py \
	StaticMultiList.py ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py \
	ServiceOrbitalPosition.py CryptoInfo.py TextCase.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py ClientsStreaming.py TemplatedMultiContent.py ProgressToText.py \
	Combine.py SensorToText.py ValueToPixmap.py PliExtraInfo.py genre.py TransponderInfo.py \
	RotorPosition.py VfdDisplay.py AnalogClock.py ServiceName2.py LayoutInfo.py \
	ConverterRotator.py MovieReference.py YWeather.py EtAnalogClock.py ExtendedServiceInfo.py ExtremeInfo.py VExtraNumText.py VWeather.py VtiTempFan.py \
	HbbtvApplicationInfo.py BhAnalogic.py BhStreamInfo.py VNetSpeedInfo.py VisionCamInfo.py CaidInfo2.py RefString.py \
	EventName2.py ServiceInfo2.py CpuUsage.py ProgressDiskSpaceInfo.py RouteInfo.py ServiceInfoEX.py Audio.py \
	VAudioInfo.py TextAddAfter.py TextAddBefore.py Textreplace.py TextToUpper.py MovieBarInfo.py
