installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py \
	ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py \
	CryptoInfo.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py ClientsStreaming.py TemplatedMultiContent.py ProgressToText.py \
	Combine.py SensorToText.py PliExtraInfo.py genre.py TransponderInfo.py \
	VfdDisplay.py AnalogClock.py HddState.py \
	CaidInfo2.py RefString.py \
	CpuUsage.py ProgressDiskSpaceInfo.py ServiceInfoEX.py Audio.py \
	ConverterRotator.py EtAnalogClock.py
