installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py CiModuleControl.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py GaugeRender.py \
	LcdPicon.py EtAnalogClockLCD.py RunningText.py AnalogClockLCD.py Cover.py RollerCharLCD.py NextEvents.py \
	RollerCharLCDLong.py VRunningText.py VWatches.py Bhclock.py VolumeText.py EmptyEpg.py PiconUni.py \
	PicCript.py PicEmu2.py AudioIcon.py
