installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py \
	RunningText.py NextEvents.py VolumeText.py \
	PicCript.py \
	AnalogClockLCD.py Cover.py EtAnalogClockLCD.py LcdPicon.py RollerCharLCD.py
